docs/version-1.8/modules/en/pages/upgrades/upgrades.adoc
= Upgrades
:doctype: book
:current-version: {page-component-version}

== Deprecation & Incompatibility

There are no deprecated or incompatible changes introduced in v{current-version}.

== Upgrade Path Enforcement and Downgrade Prevention

Starting with {longhorn-product-name} v1.5.0, upgrades are supported only from one minor version to the next consecutive minor version. For example, you can upgrade from 1.5.x to 1.6.x, but skipping versions (such as from 1.4.x to 1.6.x) is not supported. If you attempt an upgrade from an unsupported version or skip a minor version, the operation will fail automatically. However, you can revert to the previously installed version without service interruption or downtime.

Moreover, {longhorn-product-name} does not support downgrades. This restriction helps prevent unexpected system behavior and issues associated with function incompatibility, deprecation, or removal.

[CAUTION]
====
* Once you successfully upgrade to v1.7.0, you will not be allowed to revert to the previously installed version.
* Downgrading is completely unsupported and is therefore not recommended.
====

The following table outlines the supported upgrade paths.

[cols="^,^,^,^"]
|===
| Current version | Target version | Supported | Example

| x.y.*
| x.(y+1).*
| ✓
| v1.4.2  to  v1.5.1

| x.y.*
| x.y.(*+n)
| ✓
| v1.5.0  to  v1.5.1

| x.y[^lastMinorVersion].*
| (x+1).y.*
| ✓
| v1.30.0 to  v2.0.0

| x.(y-1).*
| x.(y+1).*
| X
| v1.3.3  to  v1.5.1

| x.(y-2).*
| x.(y+1).*
| X
| v1.2.6  to  v1.5.1
|===

[IMPORTANT]
====
Longhorn only allows upgrades from patch versions of the last minor release before the new major version. For example, if v1.8.0 is the last minor version before v2.0, you can upgrade from any patch version of v1.8.0 to any patch version of v2.0.
====

== Manual Checks Before Upgrades

Automated checks are only performed on some upgrade paths, and the pre-upgrade checker may not cover some scenarios. Manual checks, performed using either kubectl or the UI, are recommended for these scenarios. You can take mitigating actions or defer the upgrade until issues are addressed.

* Ensure that all V2 Data Engine volumes are detached and the replicas are stopped. The V2 Data Engine currently does not support live upgrades.
* Avoid upgrading when volumes are in the "Faulted" status. If all the replicas are deemed unusable, they may be deleted and data may be permanently lost (if no usable backups exist).
* Avoid upgrading if a failed BackingImage exists. For more information, see xref:volumes/backing-images/backing-images.adoc[Backing Image].
* Create a Longhorn system backup before you perform the upgrade. Refer to xref:snapshots-backups/system-backups/create-system-backup.adoc[Longhorn System Backup] for instructions. A system backup ensures that all critical resources, such as volumes and backing images, are backed up and can be restored if any issues occur.

== Upgrading Longhorn

There are normally two steps in the upgrade process: first upgrade Longhorn manager to the latest version, then manually upgrade the Longhorn engine to the latest version using the latest Longhorn manager.

=== 1. Upgrade Longhorn manager

* To upgrade from v1.7.x, xref:upgrades/longhorn-components/upgrade-longhorn-manager.adoc[Upgrade Longhorn Manager].

=== 2. Manually Upgrade Longhorn Engine

After Longhorn Manager is upgraded, Longhorn Engine also needs to be upgraded xref:upgrades/longhorn-components/manually-upgrade-engine.adoc[using the Longhorn UI].

=== 3. Automatically Upgrade Longhorn Engine

Since Longhorn v1.1.1, we provide an option to help you xref:upgrades/longhorn-components/auto-upgrade-engine.adoc[automatically upgrade engines].

=== 4. Automatically Migrate Recurring Jobs

With the introduction of the new label-driven `Recurring Job` feature, Longhorn has removed the `RecurringJobs` field in the Volume Spec and planned to deprecate `RecurringJobs` in the StorageClass.

During the upgrade, Longhorn will automatically:

* Create new recurring job CRs from the `recurringJobs` field in Volume Spec and convert them to the volume labels.
* Create new recurring job CRs from the `recurringJobs` in the StorageClass and convert them to the new `recurringJobSelector` parameter.

Visit xref:snapshots-backups/volume-snapshots-backups/create-recurring-backup-snapshot-job.adoc[] for more information about the new `Recurring Job` feature.

== Extended Reading

Visit https://longhorn.io/kb/troubleshooting-some-old-instance-manager-pods-are-still-running-after-upgrade[Some old instance manager pods are still running after upgrade] for more information about the cleanup strategy of instance manager pods during upgrade.

== Need Help?

If you have any issues, please report it at
https://github.com/longhorn/longhorn/issues and include your backup yaml files
as well as manager logs.
